# family-budget

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
family_budget/: app.py  database_settings.py  deps.py  main.py  router.py
family_budget/auth/: service.py
family_budget/crud/: budget.py  category.py  expense.py  user.py
family_budget/db/: base.py
family_budget/models/: budget.py  category.py  expense.py  income.py  user.py
family_budget/routers/: auth.py  budget.py  category.py  user.py
family_budget/schemas/: auth.py  base.py  budget.py  category.py  expense.py  income.py  user.py
tests/: conftest.py  db_utils.py  test_api.py
